--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sass": "^1.63.5",
     "url": "^0.11.1",
     "vue": "^3.2.47",
+    "vue-carousel": "^0.18.0",
     "vue-i18n": "^9.3.0-beta.19",
     "vue-router": "^4.2.2",
     "vue-slick-carousel": "^1.0.6"
