--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@intlify/unplugin-vue-i18n": "^0.11.0",
     "@intlify/vite-plugin-vue-i18n": "^7.0.0",
+    "axios": "^1.5.0",
     "babel": "^6.23.0",
     "bootstrap": "^5.3.0",
     "bootstrap-vue": "^2.23.1",
