--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@intlify/vite-plugin-vue-i18n": "^7.0.0",
     "axios": "^1.5.0",
     "babel": "^6.23.0",
+    "depcheck": "^1.4.7",
     "path": "^0.12.7",
     "sass": "^1.63.5",
     "url": "^0.11.1",
